fixes last image alignment in team section

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -302,7 +302,7 @@ section
 
         @include desktop
         {
-            margin-bottom: 7.5%;
+            margin-bottom: 2.5%;
         }
     }
 }
